--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -71,7 +71,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="52dp"
         android:background="@drawable/bg_text"
-        android:text="Add to Cart"
+        android:text=" to Cart"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
