I have added my tasks and modified some activities.

--- a/app/src/main/res/layout/popular_viewholder.xml
+++ b/app/src/main/res/layout/popular_viewholder.xml
@@ -34,6 +34,20 @@
         app:srcCompat="@drawable/camera" />
 
     <TextView
+        android:id="@+id/category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="camera"
+        android:textColor="#373b54"
+        android:textSize="12sp"
+        android:textStyle="normal"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="@+id/pic_pop"
+        app:layout_constraintHorizontal_bias="0.155"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pic_pop" />
+
+    <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,9 +55,10 @@
         android:textColor="#373b54"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/pic_pop"
-        app:layout_constraintStart_toStartOf="@+id/pic_pop"
-        app:layout_constraintTop_toBottomOf="@+id/pic_pop" />
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/category" />
 
     <TextView
         android:id="@+id/textView14"
@@ -55,7 +70,7 @@
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/price"
         app:layout_constraintEnd_toStartOf="@+id/price"
-        app:layout_constraintTop_toBottomOf="@+id/pic_pop" />
+        app:layout_constraintTop_toBottomOf="@+id/category" />
 
     <TextView
         android:id="@+id/addToCart_btn"
