--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,18 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView7"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="182dp"
+        android:background="@color/APP_COLOR">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:gravity="center_horizontal"
+            android:text="@string/profile"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="82dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="12dp"
+        tools:ignore="MissingClass">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="18dp"
+            android:layout_marginStart="292dp"
+            android:layout_marginTop="12dp"
+            android:src="@drawable/ic_edit">
+
+        </ImageView>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="73dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/avatar">
+
+        </ImageView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="92dp"
+            android:gravity="center_horizontal"
+            android:text="@string/username"
+            android:textColor="#373B54"
+            android:textSize="18sp"
+            android:textStyle="bold">
+
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="112dp"
+            android:gravity="center_horizontal"
+            android:text="@string/user_gmail"
+            android:textColor="#686767"
+            android:textSize="12sp"
+            android:textStyle="bold">
+
+        </TextView>
+
+    </androidx.cardview.widget.CardView>
+
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="account"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:textSize="34sp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="272dp"
+        android:background="@drawable/btn_background"
+        android:src="@drawable/ic_my_address" />
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="280dp"
+        android:gravity="center_horizontal"
+        android:text="@string/my_address"
+        android:textColor="#373B54"
+        android:textSize="18sp"
+        android:textStyle="bold">
+
+    </TextView>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="350dp"
+        android:background="@drawable/btn_background"
+        android:src="@drawable/ic_order_history" />
+
+    <TextView
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="360dp"
+        android:layout_marginStart="144dp"
+        android:gravity="center_horizontal"
+        android:text="@string/order_history"
+        android:textColor="#373B54"
+        android:textSize="18sp"
+        android:textStyle="bold">
+
+    </TextView>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="432dp"
+        android:background="@drawable/btn_background"
+        android:src="@drawable/ic_wishlist" />
+
+
+    <TextView
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="440dp"
+        android:layout_marginStart="144dp"
+        android:gravity="center_horizontal"
+        android:text="@string/wishlist"
+        android:textColor="#373B54"
+        android:textSize="18sp"
+        android:textStyle="bold">
+
+    </TextView>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="510dp"
+        android:background="@drawable/btn_background"
+        android:src="@drawable/ic_help_center" />
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="520dp"
+        android:layout_marginStart="144dp"
+        android:gravity="center_horizontal"
+        android:text="@string/help_center"
+        android:textColor="#373B54"
+        android:textSize="18sp"
+        android:textStyle="bold">
+
+    </TextView>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="590dp"
+        android:src="@drawable/ic_logout"
+        android:background="@drawable/btn_background"/>
+
+    <TextView
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="600dp"
+        android:layout_marginStart="144dp"
+        android:gravity="center_horizontal"
+        android:text="@string/logout"
+        android:textColor="#373B54"
+        android:textSize="18sp"
+        android:textStyle="bold">
+
+    </TextView>
+
+</RelativeLayout>
