--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,8 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/buttonNavigationView"
-        app:labelVisibilityMode="labeled"
-        app:menu="@menu/main_activity_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-         />
+        android:layout_height="58dp"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/main_activity_navigation" />
 </LinearLayout>
